# bda

./: pyproject.toml
bda/: utils.py
chapters/: chaper2: bayes' rule.ipynb  chapter3: The Beta-Binomial Bayesian Model.ipynb  chapter4: Balance and Sequentiality in Bayesian Analyses.ipynb  chapter5: Conjugate Families.ipynb  chapter6: Approximating the posterior.ipynb  chapter7: MCMC under the hood.ipynb  chapter8: Posterior Inference & Prediction.ipynb  chapter9: Simple Normal Regression.ipynb  posterior_predictive_models_examples.ipynb
